Fixed Mobile Post List Style. Title Word Break warning. Use TextAlign

--- a/assets/less/index.less
+++ b/assets/less/index.less
@@ -471,8 +471,8 @@ main {
       }
 
       div.post-head {
-        word-break: break-all;
         h2 {
+          text-align: center;
           line-height: 2rem;
           font-size: 1.5rem;
           font-weight: bolder;
